php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #51237 milter SAPI crash on startup
Submitted: 2010-03-08 16:51 UTC Modified: 2010-03-09 00:30 UTC
From: igmar at palsenberg dot com Assigned: felipe (profile)
Status: Closed Package: Reproducible crash
PHP Version: 5.3.2 OS: Linux
Private report: No CVE-ID: None
 [2010-03-08 16:51 UTC] igmar at palsenberg dot com
Description:
------------
./configure --with-milter
./php-milter 
Segmentation fault

Actual result:
--------------
Program received signal SIGSEGV, Segmentation fault.
virtual_fopen (path=0x0, mode=0x83e3227 "rb", tsrm_ls=0x8644018)
    at /home/igmar/php-5.3.2/TSRM/tsrm_virtual_cwd.c:1299
1299		if (path[0] == '\0') { /* Fail to open empty path */
(gdb) bt
#0  virtual_fopen (path=0x0, mode=0x83e3227 "rb", tsrm_ls=0x8644018)
    at /home/igmar/php-5.3.2/TSRM/tsrm_virtual_cwd.c:1299
#1  0x0838ca92 in mlfi_init (argc=1, argv=0xbfffe9c4)
    at /home/igmar/php-5.3.2/sapi/milter/php_milter.c:131
#2  main (argc=1, argv=0xbfffe9c4)
    at /home/igmar/php-5.3.2/sapi/milter/php_milter.c:1160


Patches

Fix_startup_crash (last revision 2010-03-08 15:52 UTC by igmar at palsenberg dot com)

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2010-03-09 00:29 UTC] felipe@php.net
Automatic comment from SVN on behalf of felipe
Revision: http://svn.php.net/viewvc/?view=revision&revision=295978
Log: - Fixed bug #51237 (milter SAPI crash on startup)
  patch by: igmar at palsenberg dot com
 [2010-03-09 00:30 UTC] felipe@php.net
-Status: Open +Status: Closed
 [2010-03-09 00:30 UTC] felipe@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Thanks for the patch. :)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC