- Fixed bug #51237 (milter SAPI crash on startup)   patch by: igmar at palsenberg dot com